--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
 </head>
 <body>
 
+	<!-- Overall page wrapper -->
+	<div id="facebook-wrapper">
+	
+		<div id="header">	
+			<!-- Header div to contain all heder elements -->
+			<div id="header-inner">
+				<div id="left-header">
+					<!-- logo, search bar -->
+					<div id="fb-logo"></div>
+					<div id="fb-search">
+						<input type="text" placeholder="Sarah Basinger">
+					</div>
+				</div>
+				
+				<div id="right-header">
+					<!-- avatar, anme, hone, social, lock, down arrow -->
+						<div id="small-avatar">
+							<img src="avatar.jpg">
+						</div>
+						<div id="avatar-name">Sarah</div>
+						<div id="home-link">
+							<a href="#">Home</a>
+						</div>
+						<div class="social-icon friends">
+						</div>
+						<div class="social-icon messages">
+						</div>
+						<div class="social-icon notifications">
+						</div>
+				</div>
+			</div>
+		</div>
+			
+		<div id="cover-photo-wrapper">
+			<!-- cover photo
+			small avatar, name, 2 buttons
+			nav menu
+			camera up in the top corner -->
+		</div>
+	</div>
+
 </body>
 </html>
