--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div id="small-avatar">
 							<img src="avatar.jpg">
 						</div>
-						<div id="avatar-name">Sarah</div>
+						<div id="avatar-name-top">Sarah</div>
 						<div id="home-link">
 							<a href="#">Home</a>
 						</div>
@@ -36,15 +36,45 @@
 						</div>
 						<div class="social-icon notifications">
 						</div>
+						<div class="spacer">|</div>
+						<div class="social-icon lock">
+						</div>
+						<div class="social-icon down-arrow">
+						</div>
 				</div>
 			</div>
 		</div>
 			
 		<div id="cover-photo-wrapper">
-			<!-- cover photo
-			small avatar, name, 2 buttons
-			nav menu
-			camera up in the top corner -->
+			<!-- big photo -->
+			<div id="big-photo">
+				<img src="big_background.jpg">
+			</div>
+			<!-- big avatar, name, buttons, menu -->
+			<div id="cover-photo-lower">
+				<div id="big-avatar">
+					<img src="avatar.jpg">
+				</div>
+
+				<div id="cover-photo-right">
+					<div id="avatar-name">
+						Sarah Basinger
+					</div>
+					<div id="cover-buttons">
+						<button>Update Info</button>
+						<button>View Activity Log</button>
+					</div>
+					<div id="cover-menu">
+						<li class="cover-menu-item">Timeline</li>
+						<li class="cover-menu-item">About</li>
+						<li class="cover-menu-item">Friends</li>
+						<li class="cover-menu-item">Photos</li>
+						<li class="cover-menu-item">More</li>
+					</div>
+				</div>
+
+			</div>
+
 		</div>
 	</div>
 
