v2 branch with separate divs not inline block

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<!-- Overall page wrapper -->
 	<div id="facebook-wrapper">
 	
+		<!-- HEADER WRAPPER -->
+
 		<div id="header">	
 			<!-- Header div to contain all heder elements -->
 			<div id="header-inner">
@@ -44,7 +46,9 @@
 				</div>
 			</div>
 		</div>
-			
+		
+		<!-- BIG PHOTO, AVATAR, NAME, BUTTONS WRAPPER -->
+
 		<div id="cover-photo-wrapper">
 			<!-- big photo -->
 			<div id="big-photo">
@@ -64,18 +68,30 @@
 						<button>Update Info</button>
 						<button>View Activity Log</button>
 					</div>
-					<div id="cover-menu">
-						<li class="cover-menu-item">Timeline</li>
-						<li class="cover-menu-item">About</li>
-						<li class="cover-menu-item">Friends</li>
-						<li class="cover-menu-item">Photos</li>
-						<li class="cover-menu-item">More</li>
-					</div>
+
 				</div>
 
 			</div>
 
 		</div>
+		
+		<!-- MENU WRAPPER -->
+		
+		<div id="cover-menu-wrapper">
+			<div id="cover-menu">
+				<li class="cover-menu-item">Timeline</li>
+				<li class="cover-menu-item">About</li>
+				<li class="cover-menu-item">Friends</li>
+				<li class="cover-menu-item">Photos</li>
+				<li class="cover-menu-item">More</li>
+			</div>
+		</div>
+
+		<!-- BODY WRAPPER -->
+
+		<div id="body-content-wrapper">
+		</div>
+
 	</div>
 
 </body>
