v3 good version - porject completed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 				</div>
 			</div>
 		</div>
-			
+		
+		<!-- COVER NAME MENU WRAPPER -->
+
 		<div id="cover-photo-wrapper">
 			<!-- big photo -->
 			<div id="big-photo">
@@ -64,17 +66,21 @@
 						<button>Update Info</button>
 						<button>View Activity Log</button>
 					</div>
-					<div id="cover-menu">
-						<li class="cover-menu-item">Timeline</li>
-						<li class="cover-menu-item">About</li>
-						<li class="cover-menu-item">Friends</li>
-						<li class="cover-menu-item">Photos</li>
-						<li class="cover-menu-item">More</li>
-					</div>
+
+				</div>
+				<div id="cover-menu">
+					<li class="cover-menu-item">Timeline</li>
+					<li class="cover-menu-item">About</li>
+					<li class="cover-menu-item">Friends</li>
+					<li class="cover-menu-item">Photos</li>
+					<li class="cover-menu-item">More</li>
+					<li class="cover-menu-item">&nbsp;</li>
 				</div>
 
 			</div>
 
+		</div>
+		<div id="body-content">
 		</div>
 	</div>
 
